--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div id='app'>{{name}}</div>
+  <div id='app'>{{name}}: {{age}}</div>
 </body>
 
 <script>
@@ -16,8 +16,13 @@
 var vm = new Vue({
   el: '#app',
   data: {
-    name: 'liuyang'
+    name: 'liuyang',
+    age: 18
   }
 })
+window.vm = vm
+setTimeout(() => {
+  vm.name = 'my'
+}, 5000)
 </script>
 </html>
