feat: 为数据响应式添加注解

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ var vm = new Vue({
   el: '#app',
   data: {
     name: 'liuyang',
-    age: 18
+    age: {
+      age1: 13
+    }
   }
 })
 window.vm = vm
